--- a/test-ch.html
+++ b/test-ch.html
@@ -1,8 +1,10 @@
 <html>
 
 <head>
+  <meta http-equiv="accept-ch" content="dpr, width">
+  <meta http-equiv="delegate-ch"
+    content="dpr https://harshit-budhraja.github.io; width https://harshit-budhraja.github.io;">
   <title>Test CH</title>
-  <meta http-equiv="Accept-CH" content="DPR, Width">
 </head>
 
 <body>
