Chaneg delegate-ch links

--- a/test-ch.html
+++ b/test-ch.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="accept-ch" content="dpr, width">
   <meta http-equiv="delegate-ch"
-    content="dpr https://harshit-budhraja.github.io; width https://harshit-budhraja.github.io;">
+    content="dpr https://ik.imagekit.io; width https://ik.imagekit.io;">
   <title>Test CH</title>
 </head>
 
