--- a/test-ch.html
+++ b/test-ch.html
@@ -2,13 +2,20 @@
 
 <head>
   <meta http-equiv="accept-ch" content="dpr, width">
-  <meta http-equiv="delegate-ch"
-    content="dpr https://ik.imagekit.io; width https://ik.imagekit.io;">
+  <meta http-equiv="delegate-ch" content="dpr https://ik.imagekit.io; width https://ik.imagekit.io;">
+  <meta charset="UTF-8" />
   <title>Test CH</title>
 </head>
 
 <body>
+  <div id="app"></div>
   <img src="https://ik.imagekit.io/oq1pyotaq/pikachu.png?tr=w-auto,dpr-auto" alt="Pikachu from ImageKit Prod" />
+
+  <script>
+    document.getElementById("app").innerHTML = `
+      <h1>Testing CH headers for ImageKit.io</h1>
+    `;
+  </script>
 </body>
 
 </html>
